--- a/partials/head-shared.html
+++ b/partials/head-shared.html
@@ -5,7 +5,7 @@
 <meta name="google-site-verification"
       content="joAorAxKwzYep5JybdSaFzleef91tKhWqGm6ABCo9uM" />
       
-<!-- Google tag (gtag.js) -->
+<!-- Google tag (gtag.js) 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-PDL5F7M3PP"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -15,10 +15,10 @@
   gtag('config', 'G-PDL5F7M3PP');
 </script>
 
-<!-- counter.dev analytics -->
+<!-- counter.dev analytics 
 <script src="https://cdn.counter.dev/script.js"
         data-id="0738f13f-0c45-4dc5-8912-f18d6766a843"
-        data-utcoffset="0"></script>
+        data-utcoffset="0"></script>-->
 
 <!-- Default Open Graph -->
 <meta property="og:type" content="website" />
